--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "json-server": "^0.15.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.11.0",
